--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embarkjs-web3": "^5.1.1",
     "lodash": "^4.17.13",
     "moment": "^2.22.2",
+    "request": "^2.88.2",
     "sweetalert2": "^9.7.2",
     "vue": "^2.5.16",
     "vue-custom-element": "^3.2.2",
