--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mdi/font": "^4.9.95",
     "at-ui": "^1.3.3",
     "at-ui-style": "^1.5.1",
+    "bancor-conversion-widget": "^2.0.0",
+    "bancor-sdk": "^0.1.9",
     "bignumber.js": "^9.0.0",
     "core-js": "^3.4.4",
     "document-register-element": "^1.11.0",
